[package]
name = "mymesi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
parking_lot = "0.12.1"
rand = "0.8.5"
rand_distr = "0.4.3"
sled = "0.34.7"
async-std = "1.10.0"
tokio = "1.26.0"
dashmap = "5.4.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "qps_benchmark"
harness = false
